--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,16 @@
 Source: kvalobs-model-populate
 Section: science
-Priority: extra
+Priority: optional
 Maintainer: Vegard Bones <vegard.bones@met.no>
-Build-Depends: debhelper (>= 5.0.42), python, python-support (>= 0.5.6)
+Build-Depends: debhelper (>= 5.0.42), python
 Standards-Version: 3.7.2
 Homepage: http://kvalobs.wiki.met.no
 
 Package: kvalobs-model-populate
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-pygresql 
+Depends: ${misc:Depends}, ${python:Depends}, python-psycopg2
 Suggests: kvalobs
 Description: read forecasts from api.met.no, and store in kvalobs
  met.no-specific package for populating kvalobs' model_data table, based on 
  data from api.met.no. A cron-job is installed, which automatically populates 
- the database twice a day. The progam may also be run manually.
+ the database twice a day. The program may also be run manually.
