--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kvalobs-model-populate
 Section: science
 Priority: optional
 Maintainer: Vegard Bones <vegard.bones@met.no>
-Build-Depends: debhelper (>= 5.0.42), python
+Build-Depends: debhelper (>= 5.0.42), python (>= 2.7) | python2
 Standards-Version: 3.7.2
 Homepage: http://kvalobs.wiki.met.no
 
