--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://kvalobs.wiki.met.no
 
 Package: kvalobs-model-populate
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-psycopg2
+Depends: ${misc:Depends}, python (>=2.7) | python2, python-psycopg2
 Suggests: kvalobs
 Description: read forecasts from api.met.no, and store in kvalobs
  met.no-specific package for populating kvalobs' model_data table, based on 
